docs/api/qiskit/0.37/qiskit.extensions.UCPauliRotGate.mdx
---
title: UCPauliRotGate (v0.37)
description: API reference for qiskit.extensions.UCPauliRotGate in qiskit v0.37
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.extensions.UCPauliRotGate
---

# UCPauliRotGate

<Class id="qiskit.extensions.UCPauliRotGate" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.21/qiskit/extensions/quantum_initializer/uc_pauli_rot.py" signature="UCPauliRotGate(angle_list, rot_axis)" modifiers="class">
  Bases: [`qiskit.circuit.gate.Gate`](qiskit.circuit.Gate "qiskit.circuit.gate.Gate")

  Uniformly controlled rotations (also called multiplexed rotations). The decomposition is based on ‘Synthesis of Quantum Logic Circuits’ by Shende et al. ([https://arxiv.org/pdf/quant-ph/0406176.pdf](https://arxiv.org/pdf/quant-ph/0406176.pdf))

  Input: angle\_list = list of (real) rotation angles \[a\_0,…,a\_\{2^k-1}]. Must have at least one entry.

  **rot\_axis = rotation axis for the single qubit rotations**

  (currently, ‘X’, ‘Y’ and ‘Z’ are supported)

  Create a new gate.

  **Parameters**

  *   **name** – The Qobj name of the gate.
  *   **num\_qubits** – The number of qubits the gate acts on.
  *   **params** – A list of parameters.
  *   **label** – An optional label for the gate.

  ## Methods

  <span id="qiskit-extensions-ucpaulirotgate-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.extensions.UCPauliRotGate.add_decomposition" signature="UCPauliRotGate.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="qiskit-extensions-ucpaulirotgate-assemble" />

  ### assemble

  <Function id="qiskit.extensions.UCPauliRotGate.assemble" signature="UCPauliRotGate.assemble()">
    Assemble a QasmQobjInstruction
  </Function>

  <span id="qiskit-extensions-ucpaulirotgate-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.extensions.UCPauliRotGate.broadcast_arguments" signature="UCPauliRotGate.broadcast_arguments(qargs, cargs)">
    Validation and handling of the arguments and its relationship.

    For example, `cx([q[0],q[1]], q[2])` means `cx(q[0], q[2]); cx(q[1], q[2])`. This method yields the arguments in the right grouping. In the given example:

    ```python
    in: [[q[0],q[1]], q[2]],[]
    outs: [q[0], q[2]], []
          [q[1], q[2]], []
    ```

    The general broadcasting rules are:

    > *   If len(qargs) == 1:
    >
    >     ```python
    >     [q[0], q[1]] -> [q[0]],[q[1]]
    >     ```
    >
    > *   If len(qargs) == 2:
    >
    >     ```python
    >     [[q[0], q[1]], [r[0], r[1]]] -> [q[0], r[0]], [q[1], r[1]]
    >     [[q[0]], [r[0], r[1]]]       -> [q[0], r[0]], [q[0], r[1]]
    >     [[q[0], q[1]], [r[0]]]       -> [q[0], r[0]], [q[1], r[0]]
    >     ```
    >
    > *   If len(qargs) >= 3:
    >
    >     ```python
    >     [q[0], q[1]], [r[0], r[1]],  ...] -> [q[0], r[0], ...], [q[1], r[1], ...]
    >     ```

    **Parameters**

    *   **qargs** (`List`) – List of quantum bit arguments.
    *   **cargs** (`List`) – List of classical bit arguments.

    **Return type**

    `Tuple`\[`List`, `List`]

    **Returns**

    A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="qiskit-extensions-ucpaulirotgate-c-if" />

  ### c\_if

  <Function id="qiskit.extensions.UCPauliRotGate.c_if" signature="UCPauliRotGate.c_if(classical, val)">
    Set a classical equality condition on this instruction between the register or cbit `classical` and value `val`.

    <Admonition title="Note" type="note">
      This is a setter method, not an additive one. Calling this multiple times will silently override any previously set condition; it does not stack.
    </Admonition>
  </Function>

  <span id="qiskit-extensions-ucpaulirotgate-control" />

  ### control

  <Function id="qiskit.extensions.UCPauliRotGate.control" signature="UCPauliRotGate.control(num_ctrl_qubits=1, label=None, ctrl_state=None)">
    Return controlled version of gate. See [`ControlledGate`](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate") for usage.

    **Parameters**

    *   **num\_ctrl\_qubits** (`int`) – number of controls to add to gate (default=1)
    *   **label** (`Optional`\[`str`]) – optional gate label
    *   **ctrl\_state** (`Union`\[`int`, `str`, `None`]) – The control state in decimal or as a bitstring (e.g. ‘111’). If None, use 2\*\*num\_ctrl\_qubits-1.

    **Returns**

    Controlled version of gate. This default algorithm uses num\_ctrl\_qubits-1 ancillae qubits so returns a gate of size num\_qubits + 2\*num\_ctrl\_qubits - 1.

    **Return type**

    [qiskit.circuit.ControlledGate](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate")

    **Raises**

    **QiskitError** – unrecognized mode or invalid ctrl\_state
  </Function>

  <span id="qiskit-extensions-ucpaulirotgate-copy" />

  ### copy

  <Function id="qiskit.extensions.UCPauliRotGate.copy" signature="UCPauliRotGate.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="qiskit-extensions-ucpaulirotgate-inverse" />

  ### inverse

  <Function id="qiskit.extensions.UCPauliRotGate.inverse" signature="UCPauliRotGate.inverse()">
    Invert this instruction.

    If the instruction is composite (i.e. has a definition), then its definition will be recursively inverted.

    Special instructions inheriting from Instruction can implement their own inverse (e.g. T and Tdg, Barrier, etc.)

    **Returns**

    a fresh instruction for the inverse

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – if the instruction is not composite and an inverse has not been implemented for it.
  </Function>

  <span id="qiskit-extensions-ucpaulirotgate-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.extensions.UCPauliRotGate.is_parameterized" signature="UCPauliRotGate.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="qiskit-extensions-ucpaulirotgate-power" />

  ### power

  <Function id="qiskit.extensions.UCPauliRotGate.power" signature="UCPauliRotGate.power(exponent)">
    Creates a unitary gate as gate^exponent.

    **Parameters**

    **exponent** (*float*) – Gate^exponent

    **Returns**

    To which to\_matrix is self.to\_matrix^exponent.

    **Return type**

    [qiskit.extensions.UnitaryGate](qiskit.extensions.UnitaryGate "qiskit.extensions.UnitaryGate")

    **Raises**

    **CircuitError** – If Gate is not unitary
  </Function>

  <span id="qiskit-extensions-ucpaulirotgate-qasm" />

  ### qasm

  <Function id="qiskit.extensions.UCPauliRotGate.qasm" signature="UCPauliRotGate.qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  <span id="qiskit-extensions-ucpaulirotgate-repeat" />

  ### repeat

  <Function id="qiskit.extensions.UCPauliRotGate.repeat" signature="UCPauliRotGate.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  <span id="qiskit-extensions-ucpaulirotgate-reverse-ops" />

  ### reverse\_ops

  <Function id="qiskit.extensions.UCPauliRotGate.reverse_ops" signature="UCPauliRotGate.reverse_ops()">
    For a composite instruction, reverse the order of sub-instructions.

    This is done by recursively reversing all sub-instructions. It does not invert any gate.

    **Returns**

    **a new instruction with**

    sub-instructions reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="qiskit-extensions-ucpaulirotgate-soft-compare" />

  ### soft\_compare

  <Function id="qiskit.extensions.UCPauliRotGate.soft_compare" signature="UCPauliRotGate.soft_compare(other)">
    Soft comparison between gates. Their names, number of qubits, and classical bit numbers must match. The number of parameters must match. Each parameter is compared. If one is a ParameterExpression then it is not taken into account.

    **Parameters**

    **other** (*instruction*) – other instruction.

    **Returns**

    are self and other equal up to parameter expressions.

    **Return type**

    bool
  </Function>

  <span id="qiskit-extensions-ucpaulirotgate-to-matrix" />

  ### to\_matrix

  <Function id="qiskit.extensions.UCPauliRotGate.to_matrix" signature="UCPauliRotGate.to_matrix()">
    Return a Numpy.array for the gate unitary matrix.

    **Returns**

    if the Gate subclass has a matrix definition.

    **Return type**

    np.ndarray

    **Raises**

    **CircuitError** – If a Gate subclass does not implement this method an exception will be raised when this base class method is called.
  </Function>

  <span id="qiskit-extensions-ucpaulirotgate-validate-parameter" />

  ### validate\_parameter

  <Function id="qiskit.extensions.UCPauliRotGate.validate_parameter" signature="UCPauliRotGate.validate_parameter(parameter)">
    Gate parameters should be int, float, or ParameterExpression
  </Function>

  ## Attributes

  ### condition\_bits

  <Attribute id="qiskit.extensions.UCPauliRotGate.condition_bits">
    Get Clbits in condition.

    **Return type**

    `List`\[[`Clbit`](qiskit.circuit.Clbit "qiskit.circuit.classicalregister.Clbit")]
  </Attribute>

  ### decompositions

  <Attribute id="qiskit.extensions.UCPauliRotGate.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.extensions.UCPauliRotGate.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  ### duration

  <Attribute id="qiskit.extensions.UCPauliRotGate.duration">
    Get the duration.
  </Attribute>

  ### label

  <Attribute id="qiskit.extensions.UCPauliRotGate.label">
    Return instruction label

    **Return type**

    `str`
  </Attribute>

  ### name

  <Attribute id="qiskit.extensions.UCPauliRotGate.name">
    Return the name.
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.extensions.UCPauliRotGate.num_clbits">
    Return the number of clbits.
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.extensions.UCPauliRotGate.num_qubits">
    Return the number of qubits.
  </Attribute>

  ### params

  <Attribute id="qiskit.extensions.UCPauliRotGate.params">
    return instruction params.
  </Attribute>

  ### unit

  <Attribute id="qiskit.extensions.UCPauliRotGate.unit">
    Get the time unit of duration.
  </Attribute>
</Class>

